--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -15,17 +15,19 @@
       <th>Created At</th>
   </thead>
   <tbody>
-    <% @people.each do |person| %>
-      <tr>
-        <td><%= person.id %></td>
-        <td><%= person.first_name %></td>
-        <td><%= person.last_name %></td>
-        <td><%= person.eye_color %></td>
-        <td><%= person.date_of_birth %></td>
-        <td><%= person.height_in_inches %></td>
-        <td><%= person.awesome %></td>
-        <td><%= person.created_at %></td>
-      </tr>
+    <% @people.order(:first_name).map do |person| %>
+      <% if person.awesome == true && person.eye_color =="green" %>
+        <tr>
+          <td><%= person.id %></td>
+          <td><%= person.first_name %></td>
+          <td><%= person.last_name %></td>
+          <td><%= person.eye_color %></td>
+          <td><%= person.date_of_birth %></td>
+          <td><%= person.height_in_inches %></td>
+          <td><%= person.awesome %></td>
+          <td><%= person.created_at %></td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
